bookinfo/bookinfo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.amazonaws.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
