bookinfo/bookinfo-Injection.yaml
# prettier-ignore
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - match:
      - headers:
          end-user:
            exact: yaniv
      fault:
        abort:
          percentage:
            value: 100.0
          # fixedDelay: 10s
          httpStatus: 500
      route:
        - destination:
            host: ratings
            subset: v1
    - route:
        - destination:
            host: ratings
            subset: v1
