bookinfo/bookinfo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo-httproute
  namespace: default
spec:
  parentRefs:
    - name: bookinfo-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /productpage
      backendRefs:
        - name: productpage
          port: 9080
    - matches:
        - path:
            type: PathPrefix
            value: /static
      backendRefs:
        - name: productpage
          port: 9080
    - matches:
        - path:
            type: Exact
            value: /login
      backendRefs:
        - name: productpage
          port: 9080
    - matches:
        - path:
            type: Exact
            value: /logout
      backendRefs:
        - name: productpage
          port: 9080
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/products
      backendRefs:
        - name: productpage
          port: 9080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
spec:
  parentRefs:
    - name: bookinfo-gateway
    # The following will override our reviews service endpoint controller and
    # will pass the traffic only to reviews-v1
    - group: ""
      kind: Service
      name: reviews
      port: 9080
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
